packages/python-alpm/python_alpm-0.4.0.tar.gz/python_alpm-0.4.0/alpm-srcinfo/tests/parse_error_snapshots/invalid_pkver.snap
---
source: alpm-srcinfo/tests/parse_errors.rs
description: "pkgbase = test\n\t# The pkgver is definitely **not** valid\n\tpkgver = ğŸ€1.0.0\n\tpkgrel = 1\n\npkgname = test\n"
expression: "format!(\"{error}\")"
---
File parsing error:
parse error at line 3, column 11
  |
3 |  pkgver = ğŸ€1.0.0
  |           ^
invalid pkgver character
expected an ASCII character, except for ':', '/', '-', '<', '>', '=', or any whitespace characters
